--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <a href="#section-about" class="nav-link">About Us</a>
                   <ul class="dropdown">
                     <li><a href="#section-how-it-works" class="nav-link">What's in the Shop</a></li>
-                    <li><a href="#section-our-team" class="nav-link">Our Team</a></li>
+                    <li><a href="#section-our-team" class="nav-link">Who Are We</a></li>
                   </ul>
                 </li>
                 <li><a href="#section-services" class="nav-link">Shop Items</a></li>
@@ -111,8 +111,8 @@
             <div class="text-left pb-1 border-primary mb-4">
               <h2 class="text-primary">About Us</h2>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis deleniti reprehenderit animi est eaque corporis! Nisi, asperiores nam amet doloribus, soluta ut reiciendis. Consequatur modi rem, vero eos ipsam voluptas.</p>
-            <p class="mb-5">Error minus sint nobis dolor laborum architecto, quaerat. Voluptatum porro expedita labore esse velit veniam laborum quo obcaecati similique iusto delectus quasi!</p>
+            <p>NavYuv, by navyuv enterprises is a super store located at the heart of newly developed Avantika colony in Ghaziabad. </p>
+            <p class="mb-5">NavYuv offers an ultra-modern shopping ambience by integrating all conceivable needs of the consumers under one roof. We provide all variety of packaged food products, stationery and more.</p>
             
             <ul class="ul-check list-unstyled success">
               <li>Error minus sint nobis dolor</li>
@@ -187,7 +187,7 @@
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center border-primary">
-            <h2 class="font-weight-light text-primary" data-aos="fade">Our Owners</h2>
+            <h2 class="font-weight-light text-primary" data-aos="fade">Who are we</h2>
           </div>
         </div>
         <div class="row">
@@ -195,7 +195,7 @@
             <div class="person">
               <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
               <h3>C. K. Choudhary</h3>
-              <p class="position text-muted">Owner</p>
+              <!-- <p class="position text-mukted">Owner</p> -->
               <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore suscipit inventore deserunt tenetur.</p>
               <ul class="ul-social-circle">
                 <li><a href="#"><span class="icon-facebook"></span></a></li>
@@ -209,7 +209,7 @@
             <div class="person">
               <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
               <h3>Anand Kumar</h3>
-              <p class="position text-muted">Owner</p>
+              <!-- <p class="position text-muted">Owner</p> -->
               <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore suscipit inventore deserunt tenetur.</p>
               <ul class="ul-social-circle">
                 <li><a href="#"><span class="icon-facebook"></span></a></li>
@@ -223,7 +223,7 @@
             <div class="person">
               <img src="images/person_4.jpg" alt="Image" class="img-fluid rounded mb-5 w-75 rounded-circle">
               <h3>Deepak Kumar</h3>
-              <p class="position text-muted">Owner</p>
+              <!-- <p class="position text-muted">Owner</p> -->
               <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore suscipit inventore deserunt tenetur.</p>
               <ul class="ul-social-circle">
                 <li><a href="#"><span class="icon-facebook"></span></a></li>
